# rs-1satordinals

./: Cargo.toml  README.md  tokens.md
cmds/: Cargo.toml
cmds/src/: examinetx.rs
lib/: Cargo.toml
lib/src/: inscribe.rs  lib.rs
src/: lib.rs  onesat.rs  result.rs  transfer.rs
