[package]
name = "one-sat-ordinals-cmds"
version = "0.0.1"
edition = "2021"
description = "Some commands for researching 1SatOrdinals"
authors = ["Daniel Connolly <daniel@dconnolly.com>"]
repository = "https://github.com/Danconnolly/rs-1satordinals"
readme = "README.md"
license-file = "../LICENSE"
keywords = ["onesatordinals", "bsv", "bitcoinsv"]
categories = ["development-tools",]

[dependencies]
one-sat-ordinals = { path = "../lib"}

[dev-dependencies]

[[bin]]
name = "examinetx"
path = "src/examinetx.rs"
