[package]
name = "one-sat-ordinals-cmds"
version = "0.0.1"
edition = "2021"
description = "Some commands for researching 1SatOrdinals"
authors = ["Daniel Connolly <daniel@dconnolly.com>"]
repository = "https://github.com/Danconnolly/rs-1satordinals"
readme = "README.md"
license-file = "../LICENSE"
keywords = ["onesatordinals", "bsv", "bitcoinsv"]
categories = ["development-tools",]

[dependencies]
bitcoinsv = { git = "https://github.com/Danconnolly/rust-bitcoinsv.git"}
clap = {  version = "4.5.2", features = ["derive"]}
log = "0.4.22"
one-sat-ordinals = { path = "../lib"}
simple_logger = "5.0.0"

[dev-dependencies]

[[bin]]
name = "examinetx"
path = "src/examinetx.rs"
